[package]
name = "sid"
version = "0.5.2"
description = "Simple Id. Tiny crate providing strongly typed ids and an id-based vector."
license = "MIT/Apache-2.0"
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/sid"

[lib]
name = "sid"

[dependencies]
num-traits = "0.1.39"
